6578583: Regression: Modality is broken in windows vista home premium from jdk1.7 b02 onwards

WS_DISABLED style should be used to fix some modality bugs

Reviewed-by: art, son